--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ Description: Reads data from FARS, a nationwide database of reported wrecks and
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.0
+Imports: dplyr, maps, readr, tidyr,
