--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
 Imports: dplyr, maps, readr, tidyr,
+Suggests: knitr,
+    rmarkdown,
+    testthat
+VignetteBuilder: knitr
