--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
-Imports: dplyr, maps, readr, tidyr,
+Imports: dplyr, maps, readr, tidyr, graphics
 Suggests: knitr,
     rmarkdown,
     testthat,
